Fix z-index of page footer

--- a/css/scat.css
+++ b/css/scat.css
@@ -12,6 +12,7 @@ body {
   background: rgb(210, 192, 159);
   border-top: 1px solid rgba(0,0,0,0.2);
   padding: 4px 16px;
+  z-index: 1030; /* same as top nav */
 }
 #page-footer #time {
   float: right;
